transmission/05-transmission-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-transmission
  namespace: transmission
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
    namespace: transmission
spec:
  rules:
  - host: "rpilab.homelab.test"
    http:
      paths:
      - pathType: Prefix
        path: "/transmission"
        backend:
          service:
            name: transmission
            port:
              number: 9091
